# rgit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
rgit-cli/: Cargo.toml
rgit-cli/src/: main.rs
rgit-core/: Cargo.toml
rgit-core/src/: lib.rs
rgit-core/src/blame/: mod.rs  tests.rs
rgit-core/src/diff/: mod.rs  tests.rs
rgit-core/src/gitignore/: mod.rs  tests.rs
rgit-core/src/index/: mod.rs  tests.rs
rgit-core/src/merge/: mod.rs  tests.rs
rgit-core/src/object/: blob.rs  commit.rs  mod.rs  tag.rs  tests.rs  tree.rs
rgit-core/src/odb/: mod.rs  tests.rs
rgit-core/src/pack/: mod.rs  tests.rs
rgit-core/src/refs/: mod.rs  tests.rs
rgit-core/src/transport/: mod.rs  tests.rs
rgit-core/src/workdir/: mod.rs  tests.rs
