[package]
name = "rgit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Rust reimplementation of Git."

[[bin]]
name = "rgit"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
rgit-core = { path = "../rgit-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
