[package]
name = "rgit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core data structures and operations for rgit, a Rust reimplementation of Git."

[lints]
workspace = true

[dependencies]
base64 = "0.22"
crc32fast = "1"
flate2 = "1"
sha1 = "0.10"
thiserror = "1"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
tempfile = "3"
